<resources>
    <string name="app_name">RetrofitExampleUsingMVVM</string>
    <string name="albums">albums</string>
    <string name="comments">comments</string>
    <string name="users">Users</string>
    <string name="post">Post</string>
    <string name="hi">hi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todos">Todos</string>
    <string name="categories">categories</string>
    <string name="products">Products</string>
    <string name="product_categories">Product-categories</string>
    <string name="back">Back</string>
</resources>