<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/post_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/users_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_alignParentRight="true"
        android:text="@string/users" />

    <Button
        android:id="@+id/comment_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_button"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/comments" />

    <Button
        android:id="@+id/todos_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/users_button"
        android:text="@string/todos" />
    <Button
        android:id="@+id/categories_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_button"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/categories" />
    <Button
        android:id="@+id/products_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todos_button"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/products" />
    <Button
        android:id="@+id/productCategory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categories_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/product_categories" />


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/productCategory_button"
        android:layout_margin="16dp"/>
</RelativeLayout>